# aix

./: .gitignore  README.md
hxh-chatbot-azureai/: README.md  main.py  pyproject.toml
hxh-chatbot-azureai/llm/: azure_llm.py
hxh-chatbot-azureai/notif/: pushover_notif.py
hxh-chatbot-azureai/tools/: record_tools.py  tools_definition.py
jobsearch-playwright-mcp-pydanticai/: main.py  main2.py  pyproject.toml
jobsearch-playwright-mcp-pydanticai/agent/: browser_agent.py  query_craft_agent.py
jobsearch-playwright-mcp-pydanticai/model/: job_listing.py  search_prompt.py
jobsearch-playwright-mcp-pydanticai/util/: document_util.py
sales-automation-openai/: README.md  main.py  pyproject.toml
sales-automation-openai/agent/: email_agent.py  sales_agent.py
sales-automation-openai/guardrail/: phone_number_guardrail.py
sales-automation-openai/tool/: email.py
search-mcp-openai/: main.py  pyproject.toml
search-mcp-openai/llm/: azure_llm.py
search-mcp-openai/mcpserver/: filesystem_mcp.py  playwright_mcp.py
search-mcp-openai/sandbox/: banoffee-recipe.md
testautomation-framework-pydanticai/: main.py  pyproject.toml
testautomation-framework-pydanticai/llm/: azure_llm.py
testautomation-framework-pydanticai/mcpserver/: filesystem_mcp.py  playwright_mcp.py
