[project]
name = "testautomation-framework-pydanticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.84.0",
    "playwright>=1.52.0",
    "pydantic-ai>=0.2.15",
    "pydantic-ai-slim>=0.2.15",
    "pytest>=8.4.0",
]
